--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
+    <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -30,8 +30,7 @@
         <li><a href="#">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  </div><!-- /.container-fluid --></nav>
   <!--
     Previous project placeholder begins
   -->
@@ -48,8 +47,8 @@
           <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <h1>Who I am</h1>
+              <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
             </div>
           </div>
         </div>
@@ -57,8 +56,8 @@
           <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>What I do</h1>
+              <p>Here are some of the languages I use on a day-to-day.</p>
             </div>
           </div>
         </div>
@@ -66,8 +65,8 @@
           <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Third slide</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum doloremque ea ex incidunt voluptates, autem animi a consequatur nobis tempore, libero itaque sunt iste est, assumenda. Aperiam, nisi odio voluptate.</p>
             </div>
           </div>
         </div>
@@ -84,31 +83,35 @@
   <!-- END of Carousel  -->
 
 
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
+  <div class="marketing">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-music"></span>
+          <h2>HTML&amp;CSS</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, quos.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-camera"></span>
+          <h2>JavaScript</h2>
+          <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-chevron"></span>
+          <h2>Design</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
+  <footer>
+    <div class="container">
+      <h3>Get in touch</h3>
+      <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
+    </div>
+  </footer>
 
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
-
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
